[uss_qualifier] Fix legacy value format for env variable

--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -48,7 +48,7 @@ RUN mkdir -p /app/uss-host-files
 HEALTHCHECK CMD sh /app/health_check.sh
 
 # Discover `monitoring` module in Python
-ENV PYTHONPATH /app
+ENV PYTHONPATH=/app
 
 # This image should be built by passing in `version` and `commit_hash` based on information from git (see `make image`)
 # This version information becomes available in the environment variables specified below
