Replace example.com with example.interuss.com in all yaml

--- a/interfaces/dummy-oauth/dummy-oauth.yaml
+++ b/interfaces/dummy-oauth/dummy-oauth.yaml
@@ -33,7 +33,7 @@ paths:
         description: Fully-qualified domain name where the service for which this access token will be used is hosted.  The `aud` claim will be populated with this value.
         schema:
           type: string
-        example: uss.example.com
+        example: uss.example.interuss.org
       - name: scope
         in: query
         required: true
