--- a/monitoring/prober/scd/resources/op_missing_initial.yaml
+++ b/monitoring/prober/scd/resources/op_missing_initial.yaml
@@ -463,7 +463,7 @@ extents:
           value: 18.288000000000004
 old_version: 0
 state: 'Accepted'
-uss_base_url: 'https://example.com'
+uss_base_url: 'https://example.interuss.org'
 new_subscription:
-  uss_base_url: 'https://example.com'
+  uss_base_url: 'https://example.interuss.org'
   notify_for_constraints: false
