[uss_qualifier] Replace has_private_adress by new resource TestExclusionResource

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -15,6 +15,8 @@ v1:
         netrid_dss_instances_v22a: { $ref: 'library/environment.yaml#/netrid_dss_instances_v22a' }
         netrid_dss_instances_v19: { $ref: 'library/environment.yaml#/netrid_dss_instances_v19' }
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
+
+        test_exclusions: { $ref: 'library/resources.yaml#/test_exclusions' }
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.second_utm_auth
@@ -35,6 +37,7 @@ v1:
           problematically_big_area: kentland_problematically_big_area
           second_utm_auth: second_utm_auth
           flight_intents: che_non_conflicting_flights
+          test_exclusions: test_exclusions
     execution:
       stop_fast: true
   artifacts:
