--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -18,6 +18,7 @@ resources:
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
+  test_exclusions: resources.dev.TestExclusionsResource?
 actions:
 - test_suite:
     suite_type: suites.astm.utm.f3548_21
@@ -40,6 +41,7 @@ actions:
       planning_area: planning_area
       problematically_big_area: problematically_big_area
       system_identity: system_identity?
+      test_exclusions: test_exclusions?
   on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.flight_planning.PrepareFlightPlannersScenario
