--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -40,6 +40,7 @@ v1:
           specification:
             participant_id: mock_uss
             mock_uss_base_url: http://host.docker.internal:8074
+        test_exclusions: { $ref: 'library/resources.yaml#/test_exclusions' }
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.all_flight_planners
@@ -63,6 +64,7 @@ v1:
           second_utm_auth: second_utm_auth
           planning_area: che_planning_area
           problematically_big_area: che_problematically_big_area
+          test_exclusions: test_exclusions
     execution:
       stop_fast: true
 
