--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -28,6 +28,8 @@ v1:
         netrid_service_providers_v22a: {$ref: 'library/environment.yaml#/netrid_service_providers_v22a'}
         netrid_observers_v22a: {$ref: 'library/environment.yaml#/netrid_observers_v22a'}
         netrid_dss_instances_v22a: {$ref: 'library/environment.yaml#/netrid_dss_instances_v22a'}
+
+        test_exclusions: { $ref: 'library/resources.yaml#/test_exclusions' }
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.mock_uss_instances_scdsc
@@ -71,6 +73,8 @@ v1:
           service_area: kentland_service_area
           planning_area: che_planning_area
           problematically_big_area: au_problematically_big_area
+
+          test_exclusions: test_exclusions
         specification:
           mock_uss_instances_source: mock_uss_instances
           locality_source: locality
@@ -102,6 +106,8 @@ v1:
                 service_area: service_area
                 planning_area: planning_area
                 problematically_big_area: problematically_big_area
+
+                test_exclusions: test_exclusions
     execution:
       stop_fast: true
   artifacts:
