--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -7,6 +7,7 @@ resources:
   utm_client_identity: resources.communications.ClientIdentityResource
   isa: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
+  test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.ISASimple
@@ -53,6 +54,7 @@ actions:
       resources:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
+        test_exclusions: test_exclusions?
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.TokenValidation
       resources:
