--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -9,6 +9,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
+  test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - test_scenario:
       scenario_type: scenarios.astm.utm.dss.synchronization.CRSynchronization
@@ -93,6 +94,7 @@ actions:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
         planning_area: planning_area
+        test_exclusions: test_exclusions?
   - test_scenario:
       scenario_type: scenarios.astm.utm.dss.synchronization.SubscriptionSynchronization
       resources:
