--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -20,6 +20,7 @@ resources:
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
+  test_exclusions: resources.dev.TestExclusionsResource?
 local_resources:
   system_identity:
     resource_type: resources.versioning.SystemIdentityResource
@@ -54,6 +55,7 @@ actions:
       id_generator: id_generator
       planning_area: planning_area
       problematically_big_area: problematically_big_area
+      test_exclusions: test_exclusions?
     specification:
       action_to_repeat:
         test_suite:
@@ -68,6 +70,7 @@ actions:
             id_generator: id_generator
             planning_area: planning_area
             problematically_big_area: problematically_big_area
+            test_exclusions: test_exclusions?
         on_failure: Continue
       dss_instances_source: dss_instances
       dss_instance_id: dss
