--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -14,6 +14,8 @@ resources:
 
   second_utm_auth: resources.communications.AuthAdapterResource?
   flight_intents: resources.flight_planning.FlightIntentsResource?
+
+  test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - action_generator:
       generator_type: action_generators.astm.f3548.ForEachDSS
@@ -26,6 +28,7 @@ actions:
         id_generator: id_generator
         planning_area: planning_area
         problematically_big_area: problematically_big_area
+        test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
           test_suite:
@@ -40,6 +43,7 @@ actions:
               id_generator: id_generator
               planning_area: planning_area
               problematically_big_area: problematically_big_area
+              test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
@@ -53,6 +57,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
           test_suite:
@@ -65,6 +70,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
@@ -78,6 +84,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
           test_suite:
@@ -90,6 +97,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
