--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -25,6 +25,8 @@ resources:
   service_area: resources.netrid.ServiceAreaResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
+
+  test_exclusions: resources.dev.TestExclusionsResource?
 local_resources:
   system_identity:
     resource_type: resources.versioning.SystemIdentityResource
@@ -58,6 +60,7 @@ actions:
       planning_area: planning_area
       problematically_big_area: problematically_big_area
       system_identity: system_identity
+      test_exclusions: test_exclusions?
   on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.network_identification
@@ -72,6 +75,7 @@ actions:
       id_generator: id_generator
       service_area: service_area
       problematically_big_area: problematically_big_area
+      test_exclusions: test_exclusions?
   on_failure: Continue
 participant_verifiable_capabilities:
     - id: required_services
