[uss_qualifier] Replace local_debug by new field allow_cleartext_queries in resource TestExclusionResource

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -169,6 +169,7 @@ v1:
           specification:
             # Tests should allow private addresses that are not publicly addressable since this configuration runs locally
             allow_private_addresses: true
+            allow_cleartext_queries: true
 
         # Means by which uss_qualifier can discover which subscription ('sub' claim of its tokes) it is described by
         utm_client_identity:
