--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -68,6 +68,7 @@ actions:
         service_providers: service_providers
         observers: observers
         dss_instances: dss_instances
+        test_exclusions: test_exclusions?
 participant_verifiable_capabilities:
   - id: service_provider
     name: NetRID Service Provider
