--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -109,3 +109,4 @@ actions:
 #      service_providers: service_providers
 #      observers: observers
 #      dss_instances: dss_instances
+#      test_exclusions: test_exclusions?
