[uss_qualifier] add scd scenario checking that CR deletion requires the correct OVN

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -19,6 +19,13 @@ actions:
         client_identity: utm_client_identity
         planning_area: planning_area
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.CRSimple
+      resources:
+        dss: dss
+        id_generator: id_generator
+        client_identity: utm_client_identity
+        planning_area: planning_area
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.synchronization.CRSynchronization
       resources:
         dss: dss
