[build] pin setuptools to avoid installation failures
This PR applies the recommendation from the generated requirements file to use the `--allow-unsafe`:

```
```

The PR also removes the pinned minor version of the base image.

Closes #768

--- a/requirements.in
+++ b/requirements.in
@@ -43,6 +43,7 @@ pyyaml==6.0.1
 requests==2.31.0
 s2sphere==0.2.5
 scipy==1.13.0
+setuptools==72.1.0
 shapely==1.7.1
 structlog==21.5.0  # deployment_manager
 termcolor==1.1.0
