--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,11 @@
 # When adding a dependency, the version should usually be specified exactly to
 # avoid breakages when new versions are released.
 
+# Note that when deriving a requirements.txt file from the present dependencies,
+# you many need to add the --allow-unsafe option to the call to pip-compile to allow it
+# to pin setuptools.
+# Without it we run into issues such as https://github.com/interuss/monitoring/issues/768
+
 aiohttp==3.9.2
 arrow==1.1.0
 bc-jsonpath-ng==1.5.9  # uss_qualifier
