Homogenize fake URLs

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -193,7 +193,7 @@ v1:
           $content_schema: monitoring/uss_qualifier/resources/definitions/ResourceDeclaration.json
           resource_type: resources.astm.f3548.v21.PlanningAreaResource
           specification:
-            base_url: https://uss_qualifier.test.utm/dummy_base_url
+            base_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/configurations/dev/f3548_self_contained/planning_area
             volume:
               outline_polygon:
                 vertices:
