--- a/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights.yaml
@@ -49,7 +49,7 @@ intents:
         connectivity_methods:
           - cellular
         endurance_minutes: 30
-        emergency_procedure_url: https://example.interussplatform.org/emergency
+        emergency_procedure_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights/flight1/emergency
         operator_id: CHEo5kut30e0mt01-qwe
         uas_id: ''
         uas_type_certificate: ''
@@ -98,7 +98,7 @@ intents:
         connectivity_methods:
           - cellular
         endurance_minutes: 30
-        emergency_procedure_url: https://example.interussplatform.org/emergency
+        emergency_procedure_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights/flight2/emergency
         operator_id: CHEo5kut30e0mt01-qwe
         uas_id: ''
         uas_type_certificate: ''
