--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/flight_auths.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/flight_auths.yaml
@@ -9,7 +9,7 @@ standard:
   connectivity_methods:
     - cellular
   endurance_minutes: 50
-  emergency_procedure_url: https://example.interussplatform.org/emergency
+  emergency_procedure_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/test_data/flight_intents/standard/flight_auths/standard/emergency
   operator_id: CHEo5kut30e0mt01-qwe
   uas_id: ''
   uas_type_certificate: ''
