--- a/monitoring/prober/scd/resources/op_missing_preexisting_unknown.yaml
+++ b/monitoring/prober/scd/resources/op_missing_preexisting_unknown.yaml
@@ -1223,7 +1223,7 @@ extents:
           value: 18.288000000000004
 old_version: 0
 state: 'Accepted'
-uss_base_url: 'https://example.interuss.org'
+uss_base_url: 'https://testdummy.interuss.org/interuss/monitoring/prober/scd/resources/op_missing_preexisting_unknown'
 new_subscription:
-  uss_base_url: 'https://example.interuss.org'
+  uss_base_url: 'https://testdummy.interuss.org/interuss/monitoring/prober/scd/resources/op_missing_preexisting_unknown'
   notify_for_constraints: false
