--- a/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
@@ -42,7 +42,7 @@ intents:
         connectivity_methods:
           - cellular
         endurance_minutes: 30
-        emergency_procedure_url: https://uav.example.interuss.org/emergency
+        emergency_procedure_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths/invalid_flight_auth/emergency
         operator_id: CHEo5kut30e0mt01-qwe
 
   valid_flight_auth:
@@ -59,5 +59,5 @@ intents:
           connectivity_methods:
             - cellular
           endurance_minutes: 30
-          emergency_procedure_url: https://uav.example.interuss.org/emergency
+          emergency_procedure_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths/valid_flight_auth/emergency
           operator_id: CHEo5kut30e0mt01-qwe
