[uss_qualifier] Add test scenario for OVN request API

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -129,6 +129,13 @@ actions:
       resources:
         crdb_cluster: dss_crdb_cluster
   - test_scenario:
+      scenario_type: scenarios.interuss.ovn_request.DSSOVNRequest
+      resources:
+        dss: dss
+        id_generator: id_generator
+        client_identity: utm_client_identity
+        planning_area: planning_area
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.Report
       resources:
         dss: dss
