--- a/requirements.txt
+++ b/requirements.txt
@@ -1632,6 +1632,10 @@ urllib3==2.2.1 \
     #   geventhttpclient
     #   kubernetes
     #   requests
+uuid6==2024.7.10 \
+    --hash=sha256:2d29d7f63f593caaeea0e0d0dd0ad8129c9c663b29e19bdf882e864bedf18fb0 \
+    --hash=sha256:93432c00ba403751f722829ad21759ff9db051dea140bf81493271e8e4dd18b7
+    # via -r requirements.in
 websocket-client==1.7.0 \
     --hash=sha256:10e511ea3a8c744631d3bd77e61eb17ed09304c413ad42cf6ddfa4c7787e8fe6 \
     --hash=sha256:f4c3d22fec12a2461427a29957ff07d35098ee2d976d3ba244e688b8b4057588
