--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -155,4 +155,4 @@ v1:
         pass_condition:
           elements:
             count:
-              equal_to: 4 # 4 CRDBAccess scenarios are skipped
+              equal_to: 6 # 4 CRDBAccess + 2 DSSOVNRequest scenarios are skipped
