--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -10,6 +10,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
+  acceptable_search_area: resources.VerticesResource
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - action_generator:
@@ -21,6 +22,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        acceptable_search_area: acceptable_search_area
         test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
@@ -34,6 +36,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              acceptable_search_area: acceptable_search_area
               test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
