--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -11,6 +11,7 @@ resources:
   service_area: resources.netrid.ServiceAreaResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource?
   problematically_big_area: resources.VerticesResource?
+  acceptable_search_area: resources.VerticesResource?
 
   second_utm_auth: resources.communications.AuthAdapterResource?
   flight_intents: resources.flight_planning.FlightIntentsResource?
@@ -57,6 +58,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        acceptable_search_area: acceptable_search_area
         test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
@@ -70,6 +72,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              acceptable_search_area: acceptable_search_area
               test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
@@ -84,6 +87,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        acceptable_search_area: acceptable_search_area
         test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
@@ -97,6 +101,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              acceptable_search_area: acceptable_search_area
               test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
