--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -25,6 +25,7 @@ resources:
   service_area: resources.netrid.ServiceAreaResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
+  acceptable_search_area: resources.VerticesResource
 
   test_exclusions: resources.dev.TestExclusionsResource?
 local_resources:
@@ -75,6 +76,7 @@ actions:
       id_generator: id_generator
       service_area: service_area
       problematically_big_area: problematically_big_area
+      acceptable_search_area: acceptable_search_area
       test_exclusions: test_exclusions?
   on_failure: Continue
 participant_verifiable_capabilities:
