--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -403,6 +403,9 @@ v1:
     # Write out a human-readable report showing the sequence of events of the test
     sequence_view: {}
 
+    # Write out a long-form report mimicking if the test run was performed manually
+    globally_expanded_report: {}
+
   # This block defines whether to return an error code from the execution of uss_qualifier, based on the content of the
   # test run report.  All of the criteria must be met to return a successful code.
   validation:
