[uss_qualifier] netrid: DSS0020 - check DSS endpoints are encrypted (#834)
Co-authored-by: Mickaël Misbach <mickael@misba.ch>

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -10,6 +10,10 @@ resources:
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.dss.EndpointEncryption
+      resources:
+        dss: dss
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.ISASimple
       resources:
         dss: dss
