--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -10,6 +10,10 @@ resources:
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.EndpointEncryption
+      resources:
+        dss: dss
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.ISASimple
       resources:
         dss: dss
