--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -106,7 +106,8 @@ services:
       - MOCK_USS_PUBLIC_KEY=/var/test-certs/auth2.pem
       - MOCK_USS_TOKEN_AUDIENCE=v22a.ridsp.uss1.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://v22a.ridsp.uss1.localutm
-      - MOCK_USS_SERVICES=ridsp
+      - MOCK_USS_SERVICES=ridsp,interaction_logging
+      - MOCK_USS_INTERACTIONS_LOG_DIR=output/ridsp_interaction_logs
       - MOCK_USS_RID_VERSION=F3411-22a
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
@@ -116,6 +117,7 @@ services:
       - 8081:80
     volumes:
       - ../../build/test-certs:/var/test-certs:ro
+      - ./output/ridsp_interaction_logs:/app/monitoring/mock_uss/output/ridsp_interaction_logs
     restart: always
     networks:
       - interop_ecosystem_network
@@ -136,7 +138,8 @@ services:
       - MOCK_USS_PUBLIC_KEY=/var/test-certs/auth2.pem
       - MOCK_USS_TOKEN_AUDIENCE=v22a.riddp.uss1.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://v22a.riddp.uss1.localutm
-      - MOCK_USS_SERVICES=riddp
+      - MOCK_USS_SERVICES=riddp,interaction_logging
+      - MOCK_USS_INTERACTIONS_LOG_DIR=output/riddp_interaction_logs
       - MOCK_USS_RID_VERSION=F3411-22a
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
@@ -146,6 +149,7 @@ services:
       - 8083:80
     volumes:
       - ../../build/test-certs:/var/test-certs:ro
+      - ./output/riddp_interaction_logs:/app/monitoring/mock_uss/output/riddp_interaction_logs
     restart: always
     networks:
       - interop_ecosystem_network
@@ -166,7 +170,8 @@ services:
       - MOCK_USS_PUBLIC_KEY=/var/test-certs/auth2.pem
       - MOCK_USS_TOKEN_AUDIENCE=v19.ridsp.uss2.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://v19.ridsp.uss2.localutm
-      - MOCK_USS_SERVICES=ridsp
+      - MOCK_USS_SERVICES=ridsp,interaction_logging
+      - MOCK_USS_INTERACTIONS_LOG_DIR=output/ridsp_v19_interaction_logs
       - MOCK_USS_RID_VERSION=F3411-19
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
@@ -176,6 +181,7 @@ services:
       - 8071:80
     volumes:
       - ../../build/test-certs:/var/test-certs:ro
+      - ./output/ridsp_v19_interaction_logs:/app/monitoring/mock_uss/output/ridsp_v19_interaction_logs
     restart: always
     networks:
       - interop_ecosystem_network
@@ -196,7 +202,8 @@ services:
       - MOCK_USS_PUBLIC_KEY=/var/test-certs/auth2.pem
       - MOCK_USS_TOKEN_AUDIENCE=v19.riddp.uss3.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://v19.riddp.uss3.localutm
-      - MOCK_USS_SERVICES=riddp
+      - MOCK_USS_SERVICES=riddp,interaction_logging
+      - MOCK_USS_INTERACTIONS_LOG_DIR=output/riddp_v19_interaction_logs
       - MOCK_USS_RID_VERSION=F3411-19
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
@@ -206,6 +213,7 @@ services:
       - 8073:80
     volumes:
       - ../../build/test-certs:/var/test-certs:ro
+      - ./output/riddp_v19_interaction_logs:/app/monitoring/mock_uss/output/riddp_v19_interaction_logs
     restart: always
     networks:
       - interop_ecosystem_network
