[uss_qualifier] rid net0470 - nominalbehavior: check SP issues notifications to subscribers

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -20,6 +20,7 @@ v1:
         second_utm_auth: {$ref: 'library/environment.yaml#/second_utm_auth'}
         mock_uss_instances_scdsc: {$ref: 'library/environment.yaml#/mock_uss_instances_scdsc'}
         mock_uss_instance_uss6: {$ref: 'library/environment.yaml#/mock_uss_instance_uss6'}
+        mock_uss_instance_dp: {$ref: 'library/environment.yaml#/mock_uss_instance_dp_v22a'}
         test_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
         prod_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
         all_flight_planners: {$ref: 'library/environment.yaml#/all_flight_planners'}
@@ -59,6 +60,7 @@ v1:
           non_conflicting_flights: che_non_conflicting_flights
           flight_planners: all_flight_planners?
           mock_uss: mock_uss_instance_uss6
+          mock_uss_dp: mock_uss_instance_dp
           scd_dss: scd_dss
           scd_dss_instances: scd_dss_instances
 
@@ -92,6 +94,7 @@ v1:
                 non_conflicting_flights: non_conflicting_flights
                 flight_planners: flight_planners?
                 mock_uss: mock_uss
+                mock_uss_dp: mock_uss_dp
                 scd_dss: scd_dss
                 scd_dss_instances: scd_dss_instances
 
