--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -3,6 +3,7 @@ resources:
   flights_data: resources.netrid.FlightDataResource
   service_providers: resources.netrid.NetRIDServiceProviders
   observers: resources.netrid.NetRIDObserversResource
+  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource
   dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
@@ -47,6 +48,15 @@ actions:
         dss_instances_source: dss_instances
         dss_instance_id: dss
       on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.ServiceProviderNotificationBehavior
+      resources:
+        flights_data: flights_data
+        service_providers: service_providers
+        mock_uss: mock_uss
+        id_generator: id_generator
+        dss_pool: dss_instances
+    on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.NominalBehavior
       resources:
