--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -11,6 +11,7 @@ resources:
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
   test_exclusions: resources.dev.TestExclusionsResource?
+  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
 actions:
 - test_suite:
     suite_type: suites.astm.netrid.f3411_22a
@@ -26,6 +27,7 @@ actions:
       service_area: service_area
       problematically_big_area: problematically_big_area
       test_exclusions: test_exclusions?
+      mock_uss: mock_uss?
   on_failure: Abort
 - test_scenario:
     scenario_type: scenarios.uspace.netrid.msl.MSLAltitude
