Set explicit permissions for GitHub Actions workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   hygiene-tests:
     name: Repository hygiene
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
     - name: Job information
