[uss_qualifier] NetRID Net0240: display provider max diagonal queries

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -21,6 +21,7 @@ v1:
         mock_uss_instances_scdsc: {$ref: 'library/environment.yaml#/mock_uss_instances_scdsc'}
         mock_uss_instance_uss6: {$ref: 'library/environment.yaml#/mock_uss_instance_uss6'}
         mock_uss_instance_dp: {$ref: 'library/environment.yaml#/mock_uss_instance_dp_v22a'}
+        mock_uss_instance_sp: {$ref: 'library/environment.yaml#/mock_uss_instance_sp_v22a'}
         test_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
         prod_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
         all_flight_planners: {$ref: 'library/environment.yaml#/all_flight_planners'}
@@ -61,6 +62,7 @@ v1:
           flight_planners: all_flight_planners?
           mock_uss: mock_uss_instance_uss6
           mock_uss_dp: mock_uss_instance_dp
+          mock_uss_sp: mock_uss_instance_sp
           scd_dss: scd_dss
           scd_dss_instances: scd_dss_instances
 
@@ -95,6 +97,7 @@ v1:
                 flight_planners: flight_planners?
                 mock_uss: mock_uss
                 mock_uss_dp: mock_uss_dp
+                mock_uss_sp: mock_uss_sp
                 scd_dss: scd_dss
                 scd_dss_instances: scd_dss_instances
 
