--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -16,6 +16,7 @@ v1:
         netrid_dss_instances_v22a: {$ref: 'library/environment.yaml#/netrid_dss_instances_v22a'}
 
         mock_uss_instance_dp_v22a: {$ref: 'library/environment.yaml#/mock_uss_instance_dp_v22a'}
+        mock_uss_instance_sp_v22a: {$ref: 'library/environment.yaml#/mock_uss_instance_sp_v22a'}
 
         test_exclusions: { $ref: 'library/resources.yaml#/test_exclusions' }
     non_baseline_inputs:
@@ -30,7 +31,8 @@ v1:
           flights_data: kentland_flights_data
           service_providers: netrid_service_providers_v22a
           observers: netrid_observers_v22a
-          mock_uss: mock_uss_instance_dp_v22a
+          mock_display_provider: mock_uss_instance_dp_v22a
+          mock_service_provider: mock_uss_instance_sp_v22a
           evaluation_configuration: netrid_observation_evaluation_configuration
           dss_instances: netrid_dss_instances_v22a
           utm_client_identity: utm_client_identity
