--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -28,8 +28,8 @@ actions:
       service_area: service_area
       problematically_big_area: problematically_big_area
       test_exclusions: test_exclusions?
-      mock_display_provider: mock_uss_dp?
-      mock_service_provider: mock_uss_sp?
+      mock_uss_dp: mock_uss_dp?
+      mock_uss_sp: mock_uss_sp?
   on_failure: Abort
 - test_scenario:
     scenario_type: scenarios.uspace.netrid.msl.MSLAltitude
