[uss_qualifier] NetRID Net0240: check display provider does not exceed max diagonal in its queries (#904)

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -3,7 +3,8 @@ resources:
   flights_data: resources.netrid.FlightDataResource
   service_providers: resources.netrid.NetRIDServiceProviders
   observers: resources.netrid.NetRIDObserversResource
-  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
+  mock_uss_dp: resources.interuss.mock_uss.client.MockUSSResource?
+  mock_uss_sp: resources.interuss.mock_uss.client.MockUSSResource?
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource
   dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
@@ -13,6 +14,15 @@ resources:
   problematically_big_area: resources.VerticesResource
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.DisplayProviderBehavior
+      resources:
+        observers: observers
+        mock_uss: mock_uss_sp
+        id_generator: id_generator
+        dss_pool: dss_instances
+        isa: service_area
+    on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.NetworkedUASDisconnect
       resources:
@@ -53,7 +63,7 @@ actions:
       resources:
         flights_data: flights_data
         service_providers: service_providers
-        mock_uss: mock_uss
+        mock_uss: mock_uss_dp
         id_generator: id_generator
         dss_pool: dss_instances
     on_failure: Continue
