--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -11,7 +11,8 @@ resources:
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
   test_exclusions: resources.dev.TestExclusionsResource?
-  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
+  mock_uss_dp: resources.interuss.mock_uss.client.MockUSSResource?
+  mock_uss_sp: resources.interuss.mock_uss.client.MockUSSResource?
 actions:
 - test_suite:
     suite_type: suites.astm.netrid.f3411_22a
@@ -27,7 +28,8 @@ actions:
       service_area: service_area
       problematically_big_area: problematically_big_area
       test_exclusions: test_exclusions?
-      mock_uss: mock_uss?
+      mock_uss_dp: mock_uss_dp?
+      mock_uss_sp: mock_uss_sp?
   on_failure: Abort
 - test_scenario:
     scenario_type: scenarios.uspace.netrid.msl.MSLAltitude
