[uss_qualifier] RID net0040: implement operator notification on slow update scenario
Squished commit

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -16,6 +16,13 @@ resources:
   uss_identification: resources.interuss.uss_identification.USSIdentificationResource?
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.ServiceProviderNotifiesSlowUpdates
+      resources:
+        flights_data: flights_data
+        service_providers: service_providers
+        evaluation_configuration: evaluation_configuration
+    on_failure: Continue
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.DisplayProviderBehavior
       resources:
         observers: observers
