Add makeUssReport test

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -25,6 +25,7 @@ v1:
           dss: dss
           dss_instances: dss_instances
           mock_uss: mock_uss
+          utm_auth: utm_auth
           second_utm_auth: second_utm_auth
           planning_area: planning_area
           problematically_big_area: problematically_big_area
