--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -73,6 +73,7 @@ v1:
           evaluation_configuration: netrid_observation_evaluation_configuration
           netrid_dss_instances: netrid_dss_instances_v22a?
           utm_client_identity: utm_client_identity
+          utm_auth: utm_auth
           second_utm_auth: second_utm_auth
           id_generator: id_generator
           service_area: kentland_service_area
@@ -109,6 +110,7 @@ v1:
                 evaluation_configuration: evaluation_configuration
                 netrid_dss_instances: netrid_dss_instances?
                 utm_client_identity: utm_client_identity
+                utm_auth: utm_auth
                 second_utm_auth: second_utm_auth
                 id_generator: id_generator
                 service_area: service_area
