--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -14,6 +14,7 @@ resources:
   dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
   utm_client_identity: resources.communications.ClientIdentityResource
+  utm_auth: resources.communications.AuthAdapterResource?
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
@@ -37,7 +38,8 @@ actions:
       dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
       utm_client_identity: utm_client_identity
-      second_utm_auth: second_utm_auth
+      utm_auth: utm_auth?
+      second_utm_auth: second_utm_auth?
       planning_area: planning_area
       problematically_big_area: problematically_big_area
       system_identity: system_identity?
