--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -1,4 +1,4 @@
-name: DSS testing for ASTM NetRID F3548-21
+name: DSS testing for ASTM F3548-21
 resources:
   dss: resources.astm.f3548.v21.DSSInstanceResource
   utm_client_identity: resources.communications.ClientIdentityResource
